# Wearable-IMU-Activity-Segmentation-Pipeline

./: .gitignore  README.md  README_zh.md  environment.yml  evaluate.py  main.spec  pyproject.toml  requirements.txt  run_inference.py  run_reproducibility_experiments.sh  run_training.sh  run_training_in_tmux.sh  train.py  train_parallel.py  train_single_model.py
android_realtime_app/: .gitignore  LICENSE  MODEL_CARD.md  README.md  README.zh-CN.md  WEIGHTS_LICENSE  build.gradle  gradle.properties  settings.gradle
android_realtime_app/app/: build.gradle  (+1 more)
data/: README.md  README_zh.md
docs/: ASSETS.md  USAGE.md
experiments/: analyze_ppg_signal_quality.py  make_external_test_representative_timeline_figures.py  make_saved_model_evaluation_summary_figures.py  run_external_test_saved_model_evaluation_suite.py  run_external_unlabeled_cohort_analysis.py  run_internal_eval_local_boundary_scale_weight_sensitivity.py  run_internal_eval_single_3s_baseline_robustness_checks.py  run_internal_eval_split_protocol_policy_selection_checks.py  run_internal_eval_three_scale_fusion_ablation.py  run_internal_eval_three_scale_postprocessing_policy_checks.py  run_retraining_cv_external_test.py
saved_models/: ensemble_config.json  norm_params_3s.pkl  norm_params_5s.pkl  norm_params_8s.pkl
scripts/: evaluate_internal_eval_split.py  inspect_internal_evaluation_split.py  make_internal_eval_evaluation_figures.py  make_train_dataset_exploration_figures.py  tune_internal_eval_high_impact_postprocessing_parameters.py  tune_internal_eval_postprocessing_parameter_grid.py
tests/: smoke_test.py
(+92 files in other folders)
