[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imu-activity-pipeline"
version = "0.1.0"
description = "Wearable IMU activity segmentation research code"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
